adding css styles

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Recetas Deliciosas</title>
+    <title>About Us - Recipes</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    <header>
-        <h1>About Us</h1>
+    <header id="header">
+        <img id="logo" src="img/origin.png" alt="logo_img">
+        <div id="about-us">
+            <a href="index.html">Home</a>
+            <a href="aboutUs.html">About Us</a>
+            <a href="JoinUs.html">Join Us</a>
+        </div>
     </header>
 
     <section>
-        <p>Bienvenido a Recetas Deliciosas, donde compartimos las mejores recetas del mundo para que puedas disfrutar de una cocina variada y saludable.</p>
-        <a href="index.html">Volver a la página principal</a>
+        <p>still not aviable</p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Recetas Deliciosas. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Ronal Orellana. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
