--- a/recipe.html
+++ b/recipe.html
@@ -9,34 +9,33 @@
 </head>
 
 <body>
-    <header>
-        <h1 id="recipe-title">Receta Detalle</h1>
-        <nav>
-            <a href="index.html">Inicio</a>
+    <header id="header">
+        <img id="logo" src="img/origin.png" alt="logo_img">
+        <div id="about-us">
+            <a href="index.html">Home</a>
             <a href="aboutUs.html">About Us</a>
-            <a href="joinUs.html">Join Us</a>
-        </nav>
+            <a href="JoinUs.html">Join Us</a>
+        </div>
     </header>
-
     <section id="recipe">
-        <img id="recipe-image" src="" alt="Imagen de la receta" style="max-width: 100%; border-radius: 10px;">
+        <img id="recipe-image" src="" alt="Image of recipe" style="max-width: 100%; border-radius: 10px;">
 
-        <h2>Ingredientes</h2>
+        <h2>Ingredients</h2>
         <ul id="ingredients-list"></ul>
 
-        <h2>Preparación</h2>
+        <h2>Instructions</h2>
         <ol id="instructions-list"></ol>
 
-        <h2>Otra Información</h2>
+        <h2>Other Information</h2>
         <p id="prep-time"></p>
         <p id="servings"></p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Recetas Deliciosas. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Ronal Orellana. All rights reserved.</p>
     </footer>
 
-    <script src="scripts/recipe.js"></script>
+    <script src="scripts/scripts.js"></script>
 </body>
 
 </html>
