--- a/joinUs.html
+++ b/joinUs.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join Us - Recetas Deliciosas</title>
+    <title>Regester Form</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-    <header>
-        <h1>Únete a Recetas Deliciosas</h1>
+    <header id="header">
+        <img id="logo" src="img/origin.png" alt="logo_img">
+        <div id="about-us">
+            <a href="index.html">Home</a>
+            <a href="aboutUs.html">About Us</a>
+            <a href="JoinUs.html">Join Us</a>
+        </div>
     </header>
 
     <section id="register">
-        <h2>Regístrate</h2>
+        <h2>Join Us</h2>
         <form id="registration-form">
-            <label for="username">Nombre de usuario:</label>
+            <label for="username">Name:</label>
             <input type="text" id="username" name="username" required>
-            <label for="email">Correo electrónico:</label>
+            <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
-            <label for="password">Contraseña:</label>
+            <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
-            <button type="submit">Registrarse</button>
+            <button type="submit">Join us</button>
         </form>
-        <a href="index.html">Volver a la página principal</a> <!-- Enlace de regreso -->
     </section>
 
     <footer>
@@ -35,15 +39,14 @@
         const registrationForm = document.getElementById('registration-form');
 
         registrationForm.addEventListener('submit', (event) => {
-            event.preventDefault(); // Evita que el formulario se envíe de forma tradicional
+            event.preventDefault();
 
             const username = event.target.username.value;
             const email = event.target.email.value;
             const password = event.target.password.value;
 
-            console.log(`Usuario registrado: ${username}, Correo: ${email}`);
-            // Aquí puedes agregar lógica para enviar los datos a un servidor o almacenarlos
-            alert('Registro exitoso');
+            console.log(`User added: ${username}, Email: ${email}`);
+            alert('Done!');
         });
     </script>
 </body>
