form and about us detail, added localstorage

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -17,6 +17,39 @@
             <a href="joinUs.html">Join Us</a>
         </div>
     </header>
+    <main>
+        <section id="about">
+            <h2>About Us</h2>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <h3>Our Mission</h3>
+                    <p>At Yummy Food, we believe that cooking should be fun, accessible, and delicious! Our mission is
+                        to inspire home cooks of all levels to explore new flavors and enjoy the process of cooking.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Our Story</h3>
+                    <p>Founded in 2024 by a group of food enthusiasts, Yummy Food started as a small blog. Over time,
+                        our passion grew into a big community.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>What We Offer</h3>
+                    <ul>
+                        <li>A wide variety of recipes from appetizers to desserts.</li>
+                        <li>Easy-to-follow instructions with tips and tricks.</li>
+                        <li>A vibrant community of food lovers sharing their culinary journeys.</li>
+                        <li>Advanced search options to find recipes by ingredients, dietary restrictions, and cuisine
+                            types.</li>
+                    </ul>
+                </div>
+                <div class="grid-item">
+                    <h3>Join Us!</h3>
+                    <p>Explore our collection of recipes, share your own, and connect with fellow food lovers. Whether
+                        you're a seasoned chef or just starting, there’s something for everyone at Yummy Food!</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
 
 
 
